force-app/main/default/objects/FAQ_Detail__c/FAQ_Detail__c.object-meta.xml
<CustomObject>
    <label>FAQ Detail</label>
    <nameField>
        <displayFormat>FAQ-{YYYY}-{MM}-{0000}</displayFormat>
        <label>FAQ Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQ Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>