force-app/main/default/objects/FAQ_Detail__c/fields/FAQ__c.field-meta.xml
<CustomField>
    <fullName>FAQ__c</fullName>
    <label>FAQ</label>
    <referenceTo>FAQ__c</referenceTo>
    <relationshipLabel>FAQ Items</relationshipLabel>
    <relationshipName>FAQ_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>