force-app/main/default/objects/FAQ_Detail__c/fields/FAQ_Answer__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Answer__c</fullName>
    <label>FAQ Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>