force-app/main/default/objects/FAQ_Detail__c/fields/FAQ_Question__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Question__c</fullName>
    <label>FAQ Question ?</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>